# qr_code_generator

./: .gitignore  CMakeLists.txt  README.md  main.cpp  qr_code.h
galois_field/: context.h  element.h  polynom.h  polynom_generator.h
generators/: data_generator.cpp  data_generator.h  generator_pipeline.h  marker_generator.cpp  marker_generator.h  mask_generator.cpp  mask_generator.h  print_generator.cpp  print_generator.h  version_generator.cpp  version_generator.h
util/: area_view.h  data_placer.cpp  data_placer.h  version_table.cpp  version_table.h
